tests/lean/varcomma.lean
variable {A : Type},
variables {A : Type},
variables {A : Type} {B : Type} in

variables {C : Type} {D : Type}

(*

*)

theorem a : true := trivial

(*

*)
